updates to last netmod lib version
Signed-off-by: Mathieu DEHARBE <mathieu.deharbe@rte-france.com>